Fix alignment on ul and ol elements

--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ ul, ol {
 }
 
 li {
-  margin: 0;
+  margin: auto;
   padding: 0;
+  width: 50%;
 }
